--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,8 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
