Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,9 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
+    configuration: 'Release'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: './bin/Debug/netcoreapp3.1/*'
+    PathtoPublish: 'bin/Release/netcoreapp3.1'
     ArtifactName: 'drop'
     publishLocation: 'Container'
